deployments/immich/microservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: microservices
  name: microservices
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservices 
  template:
    metadata:
      labels:
        app: microservices 
    spec:
      containers:
        - image: ghcr.io/immich-app/immich-server:release
          name: microservices 
          command: ["/bin/sh"]
          args: ["./start-microservices.sh"]
          resources:
            requests:
              cpu: 5m
              memory: 30Mi
          volumeMounts:
            - name: upload
              mountPath: /usr/src/app/upload
      volumes:
        - name: upload
          nfs:
            server: nas00
            path: /mnt/RAID/docker/immich/upload
      nodeSelector:
        svccontroller.k3s.cattle.io/lbpool: lamg
