deployments/immich/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web 
  template:
    metadata:
      labels:
        app: web 
    spec:
      containers:
        - image: ghcr.io/immich-app/immich-web:release
          name: web 
          command: ["/bin/sh"]
          args: ["./entrypoint.sh"]
          ports:
            - containerPort: 3000
              name: web 
              protocol: TCP
          resources:
            requests:
              cpu: 5m
              memory: 30Mi
      nodeSelector:
        svccontroller.k3s.cattle.io/lbpool: lamg

---
kind: Service
apiVersion: v1
metadata:
  name: web 
  namespace: immich
  labels:
    svccontroller.k3s.cattle.io/lbpool: immich
spec:
  type: LoadBalancer

  selector:
    app: web 

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: web
